--- a/web/package.json
+++ b/web/package.json
@@ -70,6 +70,7 @@
   "dependencies": {
     "country-data": "^0.0.31",
     "date-fns": "^3.6.0",
+    "minimist": "1.2.8",
     "react-country-flag": "^3.1.0",
     "react-date-range": "^2.0.0-alpha.4"
   }
